<resources>
    <string name="app_name">Chamber Of Wizards</string>
    <string name="drawer_open"> Drawer Open </string>
    <string name="drawer_close"> Drawer Close </string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="student_no">Student Number</string>
    <string name="create_acc">CREATE ACCOUNT</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="user_name">Username</string>
    <string name="Fullname">Full name</string>
    <string name="full_n">Full Name</string>
    <string name="save_hint">Save</string>
    <string name="log_in">LOGIN</string>
    <string name="tap_img">Tap the image above to choose your profile picture</string>
    <string name="post_hint">POST</string>
    <string name="say_something">What do you want to talk about?</string>
    <string name="edit_post">EDIT POST</string>
    <string name="delete_post">DELETE POST</string>
    <string name="profile_status">Profile Status</string>
    <string name="course_hint">Course</string>
    <string name="dob">Date of Birth</string>
    <string name="gender_hint">Gender</string>
    <string name="save">SAVE</string>
    <string name="update_acc">UPDATE ACCOUNT SETTINGS</string>
    <string name="student_number">Student Number</string>
    <string name="profile_name">Profile Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="search_for_peers">Search for Peers</string>
    <string name="comments_hint">Comments</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_text">We will send an email to that provides a link to reset your password.</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="send_friend">SEND FRIEND REQUEST</string>
    <string name="decline_fr">DECLINE FRIEND REQUEST</string>
    <string name="type_message">Type a message...</string>
    <string name="display_username">Username will go here</string>
    <string name="comment_text"> Comment </string>
    <string name="enter_sn">Enter student number...</string>
    <string name="hint_verify">VERIFY</string>
    <string name="forum">Forum</string>
    <string name="messages_title">Messages</string>
    <string name="notif">Notifications</string>
    <string name="accout_title">Account</string>

    <string name="sort_by"> Sort By </string>

    <string-array name="courses">
        <item> State your course: </item>
        <item> BS Math </item>
        <item> BS Biology </item>
        <item> BS Food Science </item>
        <item> BS Environmental Science </item>
    </string-array>

    <string name="chamber_channel"> chamber_id_01 </string>

    <string-array name="event_audiences">
        <item> Select an event audience </item>
        <item> College of Science </item>
        <item> Bachelor of Science in Biology  </item>
        <item> Bachelor of Science in Environmental Science </item>
        <item> Bachelor of Science in Food Science </item>
        <item> Bachelor of Science in Mathematics </item>
        <item> Bachelor of Science in Mathematics major in Applied Statistics </item>
        <item> Bachelor of Science in Mathematics major in Business Applications </item>
        <item> Bachelor of Science in Mathematics major in Computer Science </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like_text">Like</string>
    <string name="comment" />
    <string name="note_hint">Note</string>
    <string name="note_title">Title</string>
    <string name="book_title_hint">Book title</string>
    <string name="upload_hint">UPLOAD</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_hint">Search...</string>
    <string name="ask_string">ASK</string>
    <string name="answer_string">Answer</string>
    <string name="filter_string">Filter</string>
    <string name="string_submit">Submit</string>
    <string name="string_review">Add a review</string>

</resources>
